--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,8 +55,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\EnemyTank.cs" />
     <Compile Include="Assets\Scripts\PlayerStateController.cs" />
+    <Compile Include="Assets\Scripts\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
+    <Compile Include="Assets\Scripts\EnemyHealth.cs" />
     <Compile Include="Assets\Scripts\Consts.cs" />
   </ItemGroup>
   <ItemGroup>
